Fix compilation flags for C++ implementation.

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,8 +1,15 @@
+# Prefix where Mesos is installed
+MESOS_PREFIX = /usr
+#MESOS_PREFIX = $(HOME)/usr
+
 CXX = g++
-CXXFLAGS = -g -O2
-LDFLAGS += -lmesos
+CXXFLAGS = -g -g2 -O2 -std=c++11
+LDFLAGS = -L$(MESOS_PREFIX)/lib
+INCLUDES = -I$(MESOS_PREFIX)/include
+
+LDFLAGS += -lmesos -lprotobuf -lpthread
 CXXCOMPILE = $(CXX) $(INCLUDES) $(CXXFLAGS) -c -o $@
-CXXLINK = $(CXX) $(INCLUDES) $(CXXFLAGS) $(LDFLAGS) -o $@
+CXXLINK = $(CXX) $(INCLUDES) $(CXXFLAGS) -o $@ $< $(LDFLAGS)
 
 default: all
 all: rendler crawl_executor render_executor
@@ -10,10 +17,10 @@ all: rendler crawl_executor render_executor
 HEADERS = rendler_helper.hpp
 
 crawl_executor: crawl_executor.cpp $(HEADERS)
-	$(CXXLINK) $< -lboost_regex -lcurl
+	$(CXXLINK) -lboost_regex -lcurl
 
 %: %.cpp $(HEADERS)
-	$(CXXLINK) $<
+	$(CXXLINK)
 
 check: crawl
 	./crawl http://mesosphere.io/team/
